# Proj_Temple

./: .gitignore  README.md
ESP32_C6LCD/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32_C6LCD/components/: lv_conf.h
ESP32_C6LCD/components/UI/: CMakeLists.txt  cion.c  coin.c  font_zh_14_bpp4.c  font_zh_16_bpp4.c  font_zh_8_bpp8.c  img_bg_2.c  img_id.c  img_wifi_1.c  img_wifi_2.c  img_wifi_3.c  img_wifi_4.c  like.c  reply.c  ui.c  ui.h  view.c  wifi.c
ESP32_C6LCD/main/: CMakeLists.txt  idf_component.yml.bak  main.c
ESP32_C6LCD/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP32_C6LCD/main/ui/components/: ui_comp_hook.c
ESP32_C6LCD/main/ui/fonts/: ui_font_zh_14_bpp4.c  ui_font_zh_16_bpp4.c  ui_font_zh__8_bpp8.c
ESP32_C6LCD/main/ui/images/: ui_img_bg_1_png.c  ui_img_bg_2_png.c  ui_img_gif_0_png.c  ui_img_gif_10_png.c  ui_img_gif_1_png.c  ui_img_gif_2_png.c  ui_img_gif_3_png.c  ui_img_gif_4_png.c  ui_img_gif_5_png.c  ui_img_gif_6_png.c  ui_img_gif_7_png.c  ui_img_gif_8_png.c  ui_img_gif_9_png.c  ui_img_id_img_png.c  ui_img_wifi_1_png.c  ui_img_wifi_2_png.c  ui_img_wifi_3_png.c  ui_img_wifi_4_png.c
ESP32_C6LCD/main/ui/screens/: ui_loadScr.c  ui_mainScr.c
bili_display/: CMakeLists.txt  bilibili_dsp.c
bili_display/main/: bilibili_dsp.c
bilibili_dsp/: CMakeLists.txt  sdkconfig
bilibili_dsp/main/: CMakeLists.txt  bilibili_dsp.c  bilibili_dsp.c.bak2  bilibili_dsp.c.bak3
ble_basic/: CMakeLists.txt  sdkconfig  sdkconfig.old
ble_basic/main/: ble_app.c  (+1 more)
firewral/: .env.example  __代码讲解.md  firecrawl_exec.py
(+32 files in other folders)
